# fake_water_meter

./: app.db  pyproject.toml
src/: main.py
src/components/: ConnConfig.py  ConnectionStatus.py  ControlButtons.py  Form.py  ListSends.py  RandomRecords.py  TabForms.py
src/context/: AppContext.py
src/enums/: events.py
src/models/: records.py
src/service/: database.py  send_socketio.py
